Refactor index.html for layout and content updates
Updated styles and content for improved layout and clarity.

--- a/index.html
+++ b/index.html
@@ -6,126 +6,97 @@
 <title>AP Gitar Musik | Toko Gitar Profesional</title>
 
 <style>
-:root{
-  --primary:#ffb703;
-  --dark:#0f172a;
-  --soft:#f1f5f9;
-  --glass:rgba(255,255,255,0.15);
-}
-
-*{box-sizing:border-box}
+*{margin:0;padding:0;box-sizing:border-box}
 body{
-  margin:0;
   font-family:'Segoe UI',sans-serif;
-  background:linear-gradient(180deg,#020617,#020617);
-  color:#111;
-  scroll-behavior:smooth;
+  line-height:1.7;
+  background:#020617;
+  color:#0f172a;
 }
 
-/* ===== HERO ===== */
+/* GLOBAL */
+section{padding:90px 20px}
+.container{max-width:1150px;margin:auto}
+h1,h2{letter-spacing:.5px}
+h2{text-align:center;font-size:2.4rem;margin-bottom:25px}
+p{margin-bottom:15px}
+
+/* HERO */
 .hero{
   min-height:100vh;
   background:
-  linear-gradient(rgba(0,0,0,.75),rgba(0,0,0,.75)),
-  url('img/hero.jpg') center/cover;
+    linear-gradient(rgba(2,6,23,.85),rgba(2,6,23,.85)),
+    url("img/hero.jpg") center/cover;
   display:flex;
   align-items:center;
   justify-content:center;
   text-align:center;
-  padding:20px;
-}
-.hero h1{
   color:#fff;
-  font-size:3rem;
-  margin-bottom:10px;
 }
-.hero p{
-  color:#e5e7eb;
-  font-size:1.2rem;
-  max-width:600px;
-  margin:auto;
-}
+.hero h1{font-size:3.2rem;margin-bottom:25px}
+.hero p{max-width:900px;margin:auto;color:#e5e7eb;font-size:1.15rem}
 .hero a{
   display:inline-block;
-  margin-top:25px;
+  margin-top:35px;
+  padding:16px 36px;
   background:linear-gradient(135deg,#22c55e,#16a34a);
   color:#fff;
-  padding:14px 28px;
-  border-radius:50px;
   text-decoration:none;
+  border-radius:50px;
   font-weight:bold;
-  box-shadow:0 15px 40px rgba(0,0,0,.4);
+  box-shadow:0 25px 60px rgba(0,0,0,.5);
 }
 
-/* ===== SECTION GLOBAL ===== */
-section{
-  padding:80px 20px;
-}
-h2{
-  text-align:center;
-  font-size:2.2rem;
-  margin-bottom:20px;
-}
-.desc{
-  max-width:800px;
-  margin:0 auto 50px;
-  text-align:center;
-  color:#334155;
-}
-
-/* ===== PRODUK ===== */
-.produk{
+/* ABOUT */
+.about{
   background:linear-gradient(180deg,#f8fafc,#e2e8f0);
+}
+
+/* PRODUK */
+.produk{
+  background:linear-gradient(180deg,#ffffff,#f1f5f9);
 }
 .grid{
   display:grid;
-  grid-template-columns:repeat(auto-fit,minmax(260px,1fr));
-  gap:25px;
-  max-width:1100px;
-  margin:auto;
+  grid-template-columns:repeat(auto-fit,minmax(280px,1fr));
+  gap:30px;
+  margin-top:50px;
 }
 .card{
   background:linear-gradient(180deg,#ffffff,#f8fafc);
-  border-radius:20px;
+  border-radius:22px;
   overflow:hidden;
-  box-shadow:0 25px 50px rgba(0,0,0,.15);
+  box-shadow:0 30px 60px rgba(0,0,0,.18);
   transition:.3s;
 }
-.card:hover{transform:translateY(-8px)}
-.card img{
-  width:100%;
-  height:200px;
-  object-fit:cover;
-}
-.card .c{
-  padding:20px;
-}
-.card h3{margin:0 0 10px}
-.card p{color:#475569;font-size:.95rem}
-.card strong{color:#0f172a}
+.card:hover{transform:translateY(-10px)}
+.card img{width:100%;height:220px;object-fit:cover}
+.card .c{padding:25px}
+.card h3{margin-bottom:10px}
+.card strong{display:block;margin-top:10px}
 .card a{
   display:block;
-  margin-top:15px;
-  background:#0f172a;
-  color:#fff;
+  margin-top:18px;
   text-align:center;
   padding:12px;
-  border-radius:12px;
+  background:#020617;
+  color:#fff;
   text-decoration:none;
+  border-radius:12px;
 }
 
-/* ===== GALERI ===== */
+/* GALERI */
 .galeri{
-  background:linear-gradient(135deg,#020617,#020617,#020617);
+  background:linear-gradient(135deg,#020617,#020617);
   color:#fff;
 }
 .galeri img{
   width:100%;
-  border-radius:15px;
-  box-shadow:0 20px 40px rgba(0,0,0,.6);
+  border-radius:18px;
+  box-shadow:0 25px 45px rgba(0,0,0,.7);
 }
 
-/* ===== TESTIMONI ===== */
+/* TESTIMONI */
 .testimoni{
   background:linear-gradient(180deg,#f1f5f9,#ffffff);
 }
@@ -133,35 +104,43 @@ h2{
   max-width:900px;
   margin:auto;
   background:linear-gradient(135deg,#ffffff,#f8fafc);
+  padding:40px;
   border-radius:25px;
-  padding:30px;
-  box-shadow:0 30px 60px rgba(0,0,0,.2);
+  box-shadow:0 35px 70px rgba(0,0,0,.25);
 }
-.testi-box p{font-size:1.05rem;color:#334155}
 
-/* ===== FAQ ===== */
+/* FAQ */
 .faq{
   background:linear-gradient(180deg,#020617,#020617);
   color:#fff;
 }
 .faq details{
-  max-width:800px;
-  margin:15px auto;
+  max-width:850px;
+  margin:18px auto;
+  padding:18px 25px;
   background:rgba(255,255,255,.08);
-  padding:15px 20px;
-  border-radius:12px;
+  border-radius:14px;
 }
 
-/* ===== FOOTER ===== */
+/* CTA */
+.cta{
+  background:
+    linear-gradient(rgba(2,6,23,.85),rgba(2,6,23,.85)),
+    url("img/hero.jpg") center/cover;
+  color:#fff;
+  text-align:center;
+}
+
+/* FOOTER */
 footer{
-  background:linear-gradient(135deg,#020617,#020617);
+  background:#020617;
   color:#94a3b8;
   text-align:center;
-  padding:40px 20px;
+  padding:50px 20px;
 }
 
 @media(max-width:600px){
-  .hero h1{font-size:2.2rem}
+  .hero h1{font-size:2.3rem}
 }
 </style>
 </head>
@@ -172,22 +151,46 @@ footer{
 <div class="hero">
   <div>
     <h1>AP Gitar Musik</h1>
-    <p>Toko gitar profesional dengan kualitas terjamin, harga jujur, dan pengiriman aman ke seluruh Indonesia.</p>
-    <a href="https://wa.me/62XXXXXXXXXX">Chat WhatsApp</a>
+    <p>
+    AP Gitar Musik adalah toko gitar online yang berkomitmen menghadirkan alat musik berkualitas
+    dengan standar kenyamanan bermain dan suara yang layak digunakan dalam jangka panjang.
+    Kami percaya gitar bukan sekadar barang, tetapi bagian dari perjalanan bermusik setiap orang.
+    </p>
+    <a href="https://wa.me/62XXXXXXXXXX">Chat & Konsultasi via WhatsApp</a>
   </div>
 </div>
 
+<!-- ABOUT -->
+<section class="about">
+<div class="container">
+<h2>Tentang AP Gitar Musik</h2>
+<p>
+AP Gitar Musik hadir untuk membantu siapa saja mendapatkan gitar yang benar-benar sesuai
+dengan kebutuhan, bukan sekadar murah tapi mengecewakan.
+Setiap produk yang kami jual telah melalui proses pengecekan fisik, kenyamanan senar,
+serta kestabilan tuning.
+</p>
+<p>
+Kami mengutamakan kejujuran, pelayanan yang jelas, dan pengiriman aman ke seluruh Indonesia.
+Bagi kami, kepuasan pelanggan adalah prioritas jangka panjang.
+</p>
+</div>
+</section>
+
 <!-- PRODUK -->
 <section class="produk">
-<h2>Produk Unggulan</h2>
-<p class="desc">Kami menyediakan berbagai jenis gitar dan aksesoris pilihan yang telah melalui seleksi kualitas.</p>
+<div class="container">
+<h2>Produk & Layanan</h2>
 
 <div class="grid">
 <div class="card">
 <img src="img/gitar-akustik.jpg">
 <div class="c">
 <h3>Gitar Akustik</h3>
-<p>Kayu solid pilihan, suara hangat dan seimbang. Cocok untuk pemula hingga profesional.</p>
+<p>
+Suara hangat dan natural, nyaman dimainkan untuk pemula hingga musisi berpengalaman.
+Setup senar dibuat ramah jari dan siap dimainkan sejak pertama kali diterima.
+</p>
 <strong>Mulai Rp 500.000</strong>
 <a href="#">Pesan Sekarang</a>
 </div>
@@ -197,7 +200,10 @@ footer{
 <img src="img/gitar-elektrik.jpg">
 <div class="c">
 <h3>Gitar Elektrik</h3>
-<p>Sound powerful untuk rock, blues, jazz. Setup rapi & nyaman dimainkan.</p>
+<p>
+Karakter suara kuat dan responsif untuk berbagai genre.
+Cocok untuk latihan panjang, recording, maupun tampil di panggung.
+</p>
 <strong>Mulai Rp 1.200.000</strong>
 <a href="#">Pesan Sekarang</a>
 </div>
@@ -206,10 +212,14 @@ footer{
 <div class="card">
 <img src="img/bass.jpg">
 <div class="c">
-<h3>Bass</h3>
-<p>Low end tebal, stabil, cocok untuk recording & live performance.</p>
+<h3>Bass Gitar</h3>
+<p>
+Low yang tebal dan stabil, ideal untuk band, gereja, dan studio rekaman.
+Konstruksi kokoh dan nyaman dimainkan.
+</p>
 <strong>Mulai Rp 1.500.000</strong>
 <a href="#">Pesan Sekarang</a>
+</div>
 </div>
 </div>
 </div>
@@ -217,38 +227,76 @@ footer{
 
 <!-- GALERI -->
 <section class="galeri">
+<div class="container">
 <h2>Galeri Produk</h2>
-<div class="grid">
+<p style="text-align:center;color:#cbd5f5;max-width:850px;margin:auto">
+Foto produk asli yang kami kirim ke pelanggan.
+Tanpa edit berlebihan sebagai bentuk transparansi dan kejujuran.
+</p>
+
+<div class="grid" style="margin-top:40px">
 <img src="img/galeri1.jpg">
 <img src="img/galeri2.jpg">
 <img src="img/galeri3.jpg">
+</div>
 </div>
 </section>
 
 <!-- TESTIMONI -->
 <section class="testimoni">
+<div class="container">
 <h2>Testimoni Pelanggan</h2>
 <div class="testi-box">
-<p>“Awalnya ragu beli gitar online, tapi setelah sampai kualitasnya bener-bener bagus. Packing aman, suara enak, admin ramah. Recomended!”</p>
+<p>
+Banyak pelanggan awalnya ragu membeli gitar secara online,
+namun setelah berbelanja di AP Gitar Musik mereka merasakan sendiri
+kualitas produk, pelayanan yang jujur, serta pengiriman yang aman.
+</p>
 <strong>— Pelanggan AP Gitar Musik</strong>
+</div>
 </div>
 </section>
 
 <!-- FAQ -->
 <section class="faq">
+<div class="container">
 <h2>Pertanyaan Umum</h2>
+
 <details>
 <summary>Apakah produknya original?</summary>
-<p>Ya, semua produk dijamin original dan dicek sebelum pengiriman.</p>
+<p>
+Ya. Semua produk dicek sebelum dikirim dan dijamin sesuai deskripsi.
+</p>
 </details>
+
 <details>
-<summary>Pengiriman aman?</summary>
-<p>Kami gunakan packing berlapis dan ekspedisi terpercaya.</p>
+<summary>Apakah pengiriman aman?</summary>
+<p>
+Kami menggunakan packing berlapis untuk menjaga gitar tetap aman sampai tujuan.
+</p>
 </details>
+</div>
+</section>
+
+<!-- CTA -->
+<section class="cta">
+<div class="container">
+<h2>Masih Bingung Pilih Gitar?</h2>
+<p>
+Daripada salah beli dan menyesal, lebih baik konsultasi GRATIS dengan kami.
+Kami bantu rekomendasikan gitar sesuai kebutuhan dan budget,
+tanpa paksaan dan tanpa tipu-tipu.
+</p>
+<a href="https://wa.me/62XXXXXXXXXX">Chat WhatsApp Sekarang</a>
+</div>
 </section>
 
 <footer>
-<p>© 2026 AP Gitar Musik • Profesional • Terpercaya</p>
+<p>
+AP Gitar Musik — Partner Bermusik Anda  
+Kualitas • Kejujuran • Pengiriman Aman
+</p>
+<p>© 2026 AP Gitar Musik</p>
 </footer>
 
 </body>
