--- a/index.html
+++ b/index.html
@@ -1,244 +1,193 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AP Gitar Musik | Toko Alat Musik Profesional</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>AP Gitar Musik | Toko Alat Musik Profesional</title>
 
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      font-family: 'Segoe UI', Tahoma, sans-serif;
-    }
+<style>
+*{margin:0;padding:0;box-sizing:border-box;font-family:'Segoe UI',sans-serif}
+body{background:#0b0f1a;color:#fff;line-height:1.8}
+a{text-decoration:none;color:inherit}
+img{max-width:100%;display:block}
 
-    body {
-      background: linear-gradient(180deg, #0f2027, #203a43, #2c5364);
-      color: #fff;
-      line-height: 1.7;
-    }
+/* NAVBAR */
+nav{
+  position:sticky;top:0;z-index:999;
+  background:rgba(0,0,0,.85);
+  padding:15px 30px;
+  display:flex;justify-content:space-between;align-items:center
+}
+nav h1{color:#ffb703;font-size:1.4rem}
+nav a{margin-left:20px;font-weight:500}
 
-    header {
-      padding: 90px 20px;
-      text-align: center;
-      background: linear-gradient(135deg, #141e30, #243b55);
-    }
+/* HERO */
+header{
+  padding:120px 20px;
+  background:linear-gradient(135deg,#020024,#090979,#020024);
+  text-align:center
+}
+header h2{font-size:3rem;margin-bottom:20px}
+header p{max-width:900px;margin:auto;font-size:1.1rem;opacity:.95}
+.btn{
+  display:inline-block;margin-top:30px;
+  padding:14px 30px;
+  background:linear-gradient(135deg,#ff8c00,#ffd166);
+  color:#000;font-weight:700;border-radius:40px
+}
 
-    header h1 {
-      font-size: 3rem;
-      margin-bottom: 20px;
-      letter-spacing: 1px;
-    }
+/* SECTION */
+section{padding:90px 20px}
+.container{max-width:1200px;margin:auto}
+h3.section-title{text-align:center;font-size:2.4rem;margin-bottom:25px}
+.section-desc{text-align:center;max-width:900px;margin:0 auto 60px;opacity:.9}
 
-    header p {
-      max-width: 900px;
-      margin: auto;
-      font-size: 1.1rem;
-      opacity: 0.95;
-    }
+/* ABOUT */
+.about{
+  background:linear-gradient(180deg,#111827,#020617)
+}
 
-    section {
-      padding: 80px 20px;
-    }
+/* GRID */
+.grid{
+  display:grid;
+  grid-template-columns:repeat(auto-fit,minmax(260px,1fr));
+  gap:30px
+}
+.card{
+  background:linear-gradient(180deg,#1f2933,#020617);
+  border-radius:18px;overflow:hidden;
+  box-shadow:0 20px 50px rgba(0,0,0,.6);
+  transition:.3s
+}
+.card:hover{transform:translateY(-10px)}
+.card-content{padding:25px}
+.card h4{color:#ffd166;font-size:1.4rem;margin-bottom:15px}
+.card p{font-size:.95rem;opacity:.9}
 
-    .container {
-      max-width: 1200px;
-      margin: auto;
-    }
+/* WHY */
+.why{
+  background:linear-gradient(135deg,#0f172a,#020617)
+}
 
-    h2 {
-      text-align: center;
-      font-size: 2.4rem;
-      margin-bottom: 25px;
-    }
+/* TESTI */
+.testi{
+  background:linear-gradient(180deg,#020617,#111827)
+}
+.testi-box{
+  background:#020617;border-radius:16px;padding:30px
+}
 
-    .desc {
-      text-align: center;
-      max-width: 900px;
-      margin: auto;
-      margin-bottom: 60px;
-      font-size: 1.05rem;
-      opacity: 0.9;
-    }
+/* FAQ */
+.faq{
+  background:linear-gradient(135deg,#111827,#020617)
+}
+.faq-item{
+  background:#020617;
+  padding:25px;border-radius:14px;margin-bottom:20px
+}
 
-    .grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
-      gap: 30px;
-    }
+/* CTA */
+.cta{
+  background:linear-gradient(135deg,#ff8c00,#ffb703);
+  color:#000;text-align:center
+}
 
-    .card {
-      background: linear-gradient(180deg, #1c1c1c, #2a2a2a);
-      border-radius: 16px;
-      overflow: hidden;
-      box-shadow: 0 15px 40px rgba(0,0,0,0.5);
-      transition: transform 0.3s;
-    }
-
-    .card:hover {
-      transform: translateY(-8px);
-    }
-
-    .card img {
-      width: 100%;
-      height: 200px;
-      object-fit: cover;
-    }
-
-    .card .content {
-      padding: 25px;
-    }
-
-    .card h3 {
-      font-size: 1.4rem;
-      margin-bottom: 15px;
-      color: #ffcc70;
-    }
-
-    .card p {
-      font-size: 0.95rem;
-      opacity: 0.9;
-      margin-bottom: 20px;
-    }
-
-    .btn {
-      display: inline-block;
-      padding: 12px 22px;
-      background: linear-gradient(135deg, #ff8c00, #ffb347);
-      color: #000;
-      font-weight: bold;
-      border-radius: 30px;
-      text-decoration: none;
-    }
-
-    .btn:hover {
-      opacity: 0.9;
-    }
-
-    .cta {
-      background: linear-gradient(135deg, #232526, #414345);
-      text-align: center;
-      padding: 80px 20px;
-    }
-
-    .cta h2 {
-      margin-bottom: 20px;
-    }
-
-    footer {
-      background: #000;
-      text-align: center;
-      padding: 30px 15px;
-      font-size: 0.9rem;
-      opacity: 0.8;
-    }
-  </style>
+/* FOOTER */
+footer{
+  background:#000;text-align:center;
+  padding:35px 20px;font-size:.9rem;opacity:.85
+}
+</style>
 </head>
 
 <body>
 
-<header>
+<nav>
   <h1>AP Gitar Musik</h1>
+  <div>
+    <a href="#produk">Produk</a>
+    <a href="#tentang">Tentang</a>
+    <a href="#kontak">Kontak</a>
+  </div>
+</nav>
+
+<header>
+  <h2>Toko Alat Musik Profesional & Terpercaya</h2>
   <p>
-    AP Gitar Musik adalah toko alat musik online terpercaya yang menyediakan berbagai
-    pilihan gitar, alat musik perkusi, dan instrumen religi dengan kualitas terbaik.
-    Kami hadir untuk musisi pemula hingga profesional yang mengutamakan suara jernih,
-    bahan kuat, dan pelayanan ramah.
+    AP Gitar Musik adalah toko alat musik yang berfokus pada kualitas, kenyamanan,
+    dan kepuasan pelanggan. Kami menyediakan gitar, alat musik perkusi,
+    hingga instrumen religi untuk pemula sampai profesional.
   </p>
+  <a class="btn" href="https://wa.me/6281234567890">Chat WhatsApp Sekarang</a>
 </header>
 
-<section>
-  <div class="container">
-    <h2>Produk Unggulan Kami</h2>
-    <p class="desc">
-      Kami menyediakan berbagai alat musik pilihan yang telah melalui proses seleksi
-      kualitas. Setiap produk dirancang untuk menghasilkan karakter suara terbaik,
-      nyaman dimainkan, dan tahan lama untuk pemakaian jangka panjang.
-    </p>
-
-    <div class="grid">
-
-      <!-- GITAR -->
-      <div class="card">
-        <img src="https://images.unsplash.com/photo-1510915361894-db8b60106cb1">
-        <div class="content">
-          <h3>Gitar Akustik & Elektrik</h3>
-          <p>
-            Gitar dengan karakter suara seimbang dan desain elegan.
-            Cocok untuk latihan, manggung, rekaman studio, hingga koleksi pribadi.
-          </p>
-          <a class="btn" href="https://wa.me/6281234567890?text=Halo%20AP%20Gitar%20Musik,%20saya%20ingin%20tanya%20gitar">Chat WhatsApp</a>
-        </div>
-      </div>
-
-      <!-- CAJON -->
-      <div class="card">
-        <img src="https://images.unsplash.com/photo-1605733513597-a8f8341084f6">
-        <div class="content">
-          <h3>Cajon / Kahon</h3>
-          <p>
-            Cajon berkualitas dengan bass dalam dan slap tajam.
-            Cocok untuk akustikan, ibadah, komunitas musik, dan kafe.
-          </p>
-          <a class="btn" href="https://wa.me/6281234567890?text=Halo%20AP%20Gitar%20Musik,%20saya%20tertarik%20cajon">Chat WhatsApp</a>
-        </div>
-      </div>
-
-      <!-- BASS -->
-      <div class="card">
-        <img src="https://images.unsplash.com/photo-1541963463532-d68292c34b19">
-        <div class="content">
-          <h3>Bass Gitar</h3>
-          <p>
-            Bass gitar dengan low frequency kuat dan stabil,
-            ideal untuk genre pop, jazz, rock, hingga religi.
-          </p>
-          <a class="btn" href="https://wa.me/6281234567890?text=Halo%20AP%20Gitar%20Musik,%20saya%20ingin%20info%20bass">Chat WhatsApp</a>
-        </div>
-      </div>
-
-      <!-- DARBUKA -->
-      <div class="card">
-        <img src="https://images.unsplash.com/photo-1622482181992-4c33c7e06d1c">
-        <div class="content">
-          <h3>Darbuka</h3>
-          <p>
-            Darbuka dengan suara tajam dan responsif,
-            cocok untuk musik Timur Tengah dan islami.
-          </p>
-          <a class="btn" href="https://wa.me/6281234567890?text=Halo%20AP%20Gitar%20Musik,%20saya%20ingin%20tanya%20darbuka">Chat WhatsApp</a>
-        </div>
-      </div>
-
-      <!-- HADROH -->
-      <div class="card">
-        <img src="https://images.unsplash.com/photo-1600679472829-3044539ce8ed">
-        <div class="content">
-          <h3>Alat Musik Hadroh</h3>
-          <p>
-            Hadroh berkualitas untuk majelis sholawat, pesantren,
-            dan kegiatan keagamaan dengan suara hangat dan solid.
-          </p>
-          <a class="btn" href="https://wa.me/6281234567890?text=Halo%20AP%20Gitar%20Musik,%20saya%20ingin%20tanya%20hadroh">Chat WhatsApp</a>
-        </div>
-      </div>
-
-    </div>
-  </div>
+<section id="tentang" class="about">
+<div class="container">
+<h3 class="section-title">Tentang AP Gitar Musik</h3>
+<p class="section-desc">
+Kami percaya bahwa alat musik bukan sekadar barang, tetapi media ekspresi,
+ibadah, dan kreativitas. Karena itu setiap produk kami pilih dengan standar tinggi,
+mulai dari bahan, suara, hingga kenyamanan penggunaan.
+</p>
+</div>
 </section>
 
-<section class="cta">
-  <h2>Konsultasi Gratis Sebelum Membeli</h2>
-  <p class="desc">
-    Bingung memilih alat musik yang sesuai kebutuhan?
-    Tim AP Gitar Musik siap membantu kamu menemukan pilihan terbaik.
-  </p>
-  <a class="btn" href="https://wa.me/6281234567890?text=Halo%20AP%20Gitar%20Musik,%20saya%20ingin%20konsultasi">Hubungi WhatsApp</a>
+<section id="produk">
+<div class="container">
+<h3 class="section-title">Produk Unggulan</h3>
+<p class="section-desc">
+Semua produk kami siap digunakan untuk latihan, panggung, studio,
+hingga acara keagamaan.
+</p>
+
+<div class="grid">
+<div class="card"><img src="https://images.unsplash.com/photo-1510915361894-db8b60106cb1"><div class="card-content"><h4>Gitar</h4><p>Gitar akustik & elektrik dengan suara seimbang, nyaman, dan awet.</p><a class="btn" href="https://wa.me/6281234567890">Pesan</a></div></div>
+<div class="card"><img src="https://images.unsplash.com/photo-1605733513597-a8f8341084f6"><div class="card-content"><h4>Cajon / Kahon</h4><p>Bass dalam & slap tajam untuk akustikan dan ibadah.</p><a class="btn" href="https://wa.me/6281234567890">Pesan</a></div></div>
+<div class="card"><img src="https://images.unsplash.com/photo-1541963463532-d68292c34b19"><div class="card-content"><h4>Bass</h4><p>Low frequency kuat untuk band dan recording.</p><a class="btn" href="https://wa.me/6281234567890">Pesan</a></div></div>
+<div class="card"><img src="https://images.unsplash.com/photo-1622482181992-4c33c7e06d1c"><div class="card-content"><h4>Darbuka</h4><p>Suara tajam & responsif untuk musik Timur Tengah.</p><a class="btn" href="https://wa.me/6281234567890">Pesan</a></div></div>
+<div class="card"><img src="https://images.unsplash.com/photo-1600679472829-3044539ce8ed"><div class="card-content"><h4>Hadroh</h4><p>Instrumen religi berkualitas untuk majelis & pesantren.</p><a class="btn" href="https://wa.me/6281234567890">Pesan</a></div></div>
+</div>
+</div>
+</section>
+
+<section class="why">
+<div class="container">
+<h3 class="section-title">Kenapa Pilih Kami?</h3>
+<p class="section-desc">
+Harga jujur, kualitas terjamin, konsultasi ramah,
+dan pengiriman aman ke seluruh Indonesia.
+</p>
+</div>
+</section>
+
+<section class="testi">
+<div class="container">
+<h3 class="section-title">Testimoni Pelanggan</h3>
+<div class="grid">
+<div class="testi-box">“Gitarnya mantap, suara bersih. Admin ramah.”</div>
+<div class="testi-box">“Hadroh kualitas bagus untuk majelis kami.”</div>
+<div class="testi-box">“Pengiriman cepat, packing aman.”</div>
+</div>
+</div>
+</section>
+
+<section class="faq">
+<div class="container">
+<h3 class="section-title">FAQ</h3>
+<div class="faq-item"><b>Apakah bisa COD?</b><br>Bisa, tergantung wilayah.</div>
+<div class="faq-item"><b>Apakah bisa konsultasi dulu?</b><br>Bisa gratis via WhatsApp.</div>
+<div class="faq-item"><b>Pengiriman ke luar kota?</b><br>Kami kirim ke seluruh Indonesia.</div>
+</div>
+</section>
+
+<section id="kontak" class="cta">
+<h3>Siap Beli Alat Musik Terbaik?</h3>
+<p>Konsultasikan kebutuhanmu sekarang juga.</p>
+<a class="btn" href="https://wa.me/6281234567890">Hubungi WhatsApp</a>
 </section>
 
 <footer>
-  © 2025 AP Gitar Musik • Toko Alat Musik Profesional
+© 2025 AP Gitar Musik • Profesional • Terpercaya
 </footer>
 
 </body>
